--- a/style.css
+++ b/style.css
@@ -1,3 +1,81 @@
+@font-face {
+  font-family: Roboto;
+   src: url("./assets/fonts/Roboto.ttf");
+ }
+
+ * {
+  box-sizing: border-box;
+}
+
 body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;    
     background-color: #f5f5dc;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #4d2323;
   }
+
+  /*
+header main footer{
+  border: 1px solid red;
+}
+*/
+
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.main-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.section {
+  width: 50%;
+}
+
+.nav-list {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  list-style: none;
+  font-size: 22px;  
+}
+
+.nav-link {
+  padding: 0 20px;
+  line-height: 50px;
+  text-decoration: none;
+  color: #f5f5dc; 
+}
+
+.box-bottom{
+  min-height: 60px;
+  margin-bottom: 10px;
+  background: #3989C9;
+}
+
+.box-top{
+  min-height: 60px;
+  margin-top: 10px;
+  background: #3989C9;
+  vertical-align: top;
+}
+
+html {
+  scroll-behavior: smooth; 
+}
+
+@media (max-width: 768px) {
+  .section {
+    width: 100%;
+  }
+}
